Bug 263952 - system notification is not shown at the same time as the OSD
Summary: system notification is not shown at the same time as the OSD
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Notifications (other bugs)
Version First Reported In: 2.6-git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-01-22 11:30 UTC by S. Burmeister
Modified: 2013-01-17 13:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-01-22 11:30:55 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

If one jumps to the next song the OSD is displayed instantly whereas the system notification only appears a few seconds later. My guess is that amarok loads the content of the "lyrics", "current song" etc. before it shows the system notification.

Reproducible: Always
Comment 1 S. Burmeister 2011-01-22 11:36:12 UTC
Removing all widgets improves the situation but the notification is still not shown at the same time as the OSD but soem seconds later.
Comment 2 Myriam Schweingruber 2011-01-22 13:14:09 UTC
What Amarok version is this about? Please don't forget to set it when you report a bug.
Comment 3 S. Burmeister 2011-01-22 13:21:09 UTC
yesterday's git
Comment 4 Myriam Schweingruber 2011-01-22 14:11:20 UTC
Confirmed on current git
Comment 5 Sergey Ivanov 2011-01-25 21:39:01 UTC
Amarok just creates new event for KNotify and ask daemon to show It. There is no way to force KNotify to draw new event before Its own timer event. It's not a bug.
Comment 6 S. Burmeister 2011-01-25 21:43:43 UTC
So you claim that there is a >1 second delay between amarok creating the notification and the daemon showing it? If so, please re-assign to the notification component since that one seems to cause a delay then.

Something is causing a delay and that's a bug.
Comment 7 Sergey Ivanov 2011-01-25 21:51:17 UTC
My bad. There is really the 3s timer.
Comment 8 Myriam Schweingruber 2012-10-21 11:59:12 UTC
Sergey, any news on this? I assume this is still valid with current git?
Comment 9 Myriam Schweingruber 2012-12-04 15:38:37 UTC
Currently, with Amarok v2.6.0-422-gfc07990  and KDE 4.9.3, the system notification doesn't show up at all.
Comment 10 Matěj Laitl 2012-12-29 19:03:17 UTC
Git commit f7170ee1872432d05bcb58e6c1ac36b69849e765 by Matěj Laitl.
Committed on 29/12/2012 at 19:59.
Pushed by laitl into branch 'master'.

KNotificationBackend: rework to make notifications instant and more reliable

BUGFIXES:
 * Make track announcements via KDE Notifications instant.
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +54   -68   src/KNotificationBackend.cpp
M  +11   -12   src/KNotificationBackend.h

http://commits.kde.org/amarok/f7170ee1872432d05bcb58e6c1ac36b69849e765
Comment 11 Kai Uwe Broulik 2013-01-07 14:09:51 UTC
When I asked about the delay a year ago or more, it was said this is intended to prevent notificiation spamming when you quickly skip through tracks …
Comment 12 Kevin Funk 2013-01-08 11:59:35 UTC
I'm wondering about this, too. When I wrote the code, I used this delay to prevent this.
Can't check atm, but what happens when you quickly skip through songs?
Comment 13 Christoph Feck 2013-01-16 02:54:07 UTC
What is the status of this bug? Comment #12 seems to indicate that there is still something to investigate.
Comment 14 Myriam Schweingruber 2013-01-17 13:01:03 UTC
(In reply to comment #13)
> What is the status of this bug? Comment #12 seems to indicate that there is
> still something to investigate.

No it doesn't, I checked with Kevin.