KNotificationBackend: rework to make notifications instant and more reliable

BUGFIXES:
 * Make track announcements via KDE Notifications instant.

BUG: 263952
FIXED-IN: 2.7